k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: django-app-ns
  name: django-app
spec:
  selector:
    app: django-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
