k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: django-app-ns
  name: django-app
spec:
  rules:
    - host: django-app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-app
                port:
                  number: 80
